<resources>
    <string name="app_name">ManufaktUhr</string>
    <string name="title_activity_login">title activity login</string>
    <string name="gesamtkosten_textview">Fixkosten:</string>
    <string name="stueckkosten_textview">variable Stückkosten:</string>
    <string name="zurueck_button">Zurück</string>
    <string name="weiter_button">Weiter</string>
    <string name="introduction_info_textview">Herzlich Willkommen beim Unternehmensplanspiel ManufaktUhr!

Ihr Unternehmen produziert Armbanduhren und versucht sich auf dem Absatzmarkt gegen die Konkurenz zu behaupten.
Während des Spiels müssen Sie als Geschäftsführer alle relevanten Entscheidungen treffen, die sich auf verschiedene
Unternehmensbereiche wie zum Beispiel Marketing und das Personalwesen auswirken. In jeder der zehn Geschäftsperioden stoßen
sie die Produktion einer neuen Uhrenreihe an, die noch in derselben Periode abgesetzt wird. Die getroffenen Entscheidungen wirken
sich auf Ihre Herstellungskosten, aber auch den Bekanntheitsgrad und die Beliebtheit der Uhr aus. Letztendlich beeinflussen sie
Ihre Absatzmöglichkeiten im Vergleich zur Konkurenz.
Die Auswirkungen der einzelnen Entscheidungen
sind jeweils detailliert ausgeführt.

Los gehts und viel Spaß!

</string>
    <string name="verstanden_button">Verstanden</string>
    <string name="login_info_textview">Hier können Sie sich mit ihrem Spielernamen und Ihrem Passwort einloggen.
Falls Sie das erste Mal diese App benutzen, wählen Sie zu Beginn einen beliebigen Spielernamen und ein sicheres Passwort aus und klicken Sie auf Neuer Account.</string>
    <string name="login_username_textview">Nutzername</string>
    <string name="login_password_textview">Passwort</string>
    <string name="forschung_info_textview">Hier können Sie entscheiden, wieviel Geld Sie in der aktuellen Periode in Ihre Forschungs- und Entwicklungsabteilung investieren möchten. Diese ist zuständig für Design und Konzeption der Uhr. Höhere Investitionsausgaben spiegeln sich später in einer erhöhten Beliebtheit und Kaufbereitschaft der Kunden wieder. Diese Investitionsausgaben wirken sich auf Ihre Fixkosten aus.  </string>
    <string name="forschung_textview">Investitionshöhe für Forschung und Entwicklung</string>
    <string-array name="forschung_spinner_array">
        <item>15000€ Investition</item>
        <item>8000€ Investition</item>
        <item>2500€ Investition</item>
    </string-array>
    <string name="armband_info_textview">Hier können Sie das Material für das Armband auswählen. Bedingt durch Trendentwicklungen kann es sein, dass manche Materialien in einer Periode beliebter sind als in einer anderen. Entsprechend sind die Kunden bereit mehr Geld für eine solche Uhr zu zahlen. Beachten Sie, dass es durch unvorhersehbare Ereignisse dazu kommen kann, dass manche Materialien nicht geliefert werden können und Sie eventuell eine Neuauswahl treffen müssen.</string>
    <string name="armband_textview">Materialeinkauf: Armband</string>
    <string-array name="armband_spinner_array">
        <item>Leder (1€)</item>
        <item>Kunstleder (0,2€)</item>
        <item>Holz (1,45€)</item>
        <item>Textil (0,1€)</item>
        <item>Metall (1€)</item>
    </string-array>
    <string name="uhrwerk_info_textview">    Hier können Sie die Uhrwerkart auswählen. Bedingt durch Trendentwicklungen kann es sein, dass manche Uhrwerke in einer Periode beliebter sind als in einer anderen. Entsprechend sind die Kunden bereit mehr Geld für eine solche Uhr zu zahlen. Beachten Sie, dass es durch unvorhersehbare Ereignisse dazu kommen kann, dass manche Materialien nicht geliefert werden können und Sie eventuell eine Neuauswahl treffen müssen.</string>
    <string name="uhrwerk_textview">Materialeinkauf: Uhrwerk</string>
    <string-array name="uhrwerk_spinner_array">
        <item>Mechanisch (4€)</item>
        <item>Elektromechanisch (3€)</item>
        <item>Elektronisch (2€)</item>
    </string-array>
    <string name="gehaeuse_info_textview">Hier können Sie das Material für das Uhrgehäuse auswählen. Bedingt durch Trendentwicklungen kann es sein, dass manche Materialien in einer Periode beliebter sind als in einer anderen. Entsprechend sind die Kunden bereit mehr Geld für eine solche Uhr zu zahlen. Beachten Sie, dass es durch unvorhersehbare Ereignisse dazu kommen kann, dass manche Materialien nicht geliefert werden können und Sie eventuell eine Neuauswahl treffen müssen.</string>
    <string name="gehaeuse_textview">Materialeinkauf: Uhrgehäuse</string>
    <string-array name="gehaeuse_spinner_array">
        <item>Glas (2€)</item>
        <item>Holz (1,5€)</item>
        <item>Kunststoff (0,2€)</item>
        <item>Metall (1€)</item>
    </string-array>
    <string name="bezahlart_info_textview">Hier können Sie entscheiden, welche Bezahlarten Sie ihren Kunden anbieten möchten. Für die verschiedenen Bezahlarten ist bei den Anbietern (VISA, PayPal etc.) eine jährliche Pauschalgebühr zu entrichten um diese Optionen anbieten zu können. Flexiblere Bezahlmöglichkeiten erhöhen die Kundenzufriedenheit und wirken sich positiv auf mögliche Absatzzahlen aus. Diese Gebühren wirken sich auf Ihre Fixkosten aus. </string>
    <string name="bezahlart_textview">Anbieten von folgenden Bezahlarten: </string>
    <string name="wasserdichtheit_info_textview">Hier können Sie die Wasserdichtheit für Ihre Uhren auswählen. Die Wahl der Wasserdichtheit und somit die unterschiedliche Qualität und die Beliebtheit beeinflussen wiederum die Kunden und was Sie dementsprechend bereit wären für Ihre Uhren zu zahlen.</string>
    <string name="wasserdichtheit_textview">Auswahl der Wasserdichtheit</string>
    <string-array name="wasserdichtheit_spinner_array">
        <item>nicht wassergeschützt (0€)</item>
        <item>spritzwassergeschützt (0,5€)</item>
        <item>wasserdicht (2€)</item>
    </string-array>
    <string name="zeitarbeiter_info_textview">In Ihrem Unternehmen werden die Uhren von Zeitarbeitern hergestellt. Hier können Sie den Qualifikationsgrad dieser Arbeiter auswählen. Die Wahl des Qualifikationsgrads wirkt sich auf die Qualität und damit auf die Beliebtheit der Uhren aus. Entsprechend sind die Kunden bereit mehr oder weniger für Ihre Uhren zu zahlen. Eventuell kommt es vor, dass gewisse Entscheidungsalternativen auf Grund von unvorhersehbaren Ereignissen nicht mehr verfügbar sind. </string>
    <string name="zeitarbeiter_textview">Qualifikationsgrad der Zeitarbeiter</string>
    <string-array name="zeitarbeiter_spinner_array">
        <item>Geselle (4,5€)</item>
        <item>Praktikant (0,5€)</item>
        <item>Lehrling (0,5€)</item>
        <item>Meister (5€)</item>
    </string-array>
    <string name="marketing_info_textview">Um Ihre Uhren an die Kunden zu bringen, müssen Sie eine Werbekampagne durchführen. Hier können Sie entscheiden welche Kommunikationskanäle dafür verwendet werden sollen. Eine umfangreichere Werbekampagne spricht mehr Kunden an und ermöglicht höhere Absatzzahlen. Diese Investitionsausgaben wirken sich auf Ihre Fixkosten aus.</string>
    <string name="marketing_textview">Umfang der Werbekampagne</string>
    <string name="produktionsvolumen_info_textview">Hier können Sie das gewünschte Produktionsvolumen für die aktuelle Periode festlegen. Die aktuellen Fixkosten und variablen Stückkosten sehen Sie unten. Bedenken Sie, dass Sie ihr Budget nicht überschreiten dürfen. In einer Periode können zwischen 100 und 10.000 Uhren produziert werden.</string>
    <string name="produktionsvolumen_textview">Gewünschtes Produktionsvolumen</string>
    <string name="verkaufspreis_info_textview">Bitte wählen Sie im letzten Schritt den Verkaufspreis (pro Uhr) zu dem Sie ihre Uhren am Absatzmarkt veräußern wollen. Als Grundlage werde Ihnen unten die aktuellen Stückkosten für die Herstellung einer Uhr angezeigt (Die Fixkosten wurden auf das Produktionsvolumen verteilt). Die Gewinnmarge können Sie somit selbst festlegen.  </string>
    <string name="verkaufspreis_textview">Festlegung des Verkaufspreis (pro Uhr)</string>
    <string name="bestellzsmfassung_textview">Unten aufgelistet finden Sie Ihre Auftragszusammenfassung, basierend auf
    den Entscheidungen, die Sie vorab getroffen haben. Bitte bestätigen Sie den Auftrag unten.</string>
    <string name="bestellzsmfassung_forschung_textview">Forschungsinvestition:</string>
    <string name="bestellzsmfassung_armband_textview">Armbandmaterial:</string>
    <string name="bestellzsmfassung_uhrwerk_textview">Uhrwerkart:</string>
    <string name="bestellzsmfassung_gehaeuse_textview">Gehäusematerial:</string>
    <string name="bestellzsmfassung_bezahlart_textview">Bezahlarten:</string>
    <string name="bestellzsmfassung_wasserdichtheit_textview">Wasserdichtheit:</string>
    <string name="bestellzsmfassung_zeitarbeiter_textview">Zeitarbeiter:</string>
    <string name="bestellzsmfassung_marketing_textview">Marketingmaßnahmen:</string>
    <string name="bestellzsmfassung_produktionsvolumen_textview">Produktionsvolumen:</string>
    <string name="bestellzsmfassung_verkaufspreis_textview">Verkaufspreis:</string>
    <string name="z1leder_info_textview">"Upps!
Aufgrund einer Kuhgrippe konnte leider kein Armband aus Leder geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Armbandmaterial."</string>
    <string name="z1kunstleder_info_textview">"Upps!
Aufgrund von Produktionsengpässen konnte leider kein Armband aus Kunstleder geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Armbandmaterial." </string>
    <string name="z1holz_info_textview">"Upps!
Aufgrund eines Waldbrandes in Brasilien konnte leider kein Armband aus Holz geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Armbandmaterial."</string>
    <string name="z1textil_info_textview">"Upps!
Aufgrund eines Brandes konnte leider kein Armband aus Textil geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Armbandmaterial." </string>
    <string name="z1metall_info_textview">"Upps!
Aufgrund mehrerer umgestürzter Regale im Lager konnte leider kein Gehäuse aus Glas geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Gehäuse." </string>
    <string name="z2glas_info_textview">"Upps!
Aufgrund mehrerer umgestürzter Regale im Lager konnte leider kein Gehäuse aus Glas geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Gehäuse." </string>
    <string name="z2holz_info_textview">"Upps!
Aufgrund eines Waldbrandes in Russland konnte leider kein Gehäuse aus Holz geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Gehäuse." </string>
    <string name="z2kunststoff_info_textview">"Upps!
Aufgrund der gesellschaftlichen Kritik an Kunststoff konnte leider kein Gehäuse aus Kunststoff geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Gehäuse." </string>
    <string name="z2metall_info_textview">"Upps!
Aufgrund eines Streiks in der Metallbranche konnte leider kein Gehäuse aus Metall geliefert werden. Die geleistete Anzahlung in Höhe von 10% erhalten Sie leider nicht zurück. Bitte entscheiden Sie sich für ein anderes Gehäuse." </string>
</resources>