<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_e10_verkaufspreis"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patsc.fallstudie.Activities.VerkaufspreisActivity">




    <Button
        android:text="@string/weiter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weiter_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="goToNextActivity"/>

    <TextView
        android:text="@string/verkaufspreis_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/verkaufspreis_info_textview" />

    <TextView
        android:text="@string/stueckkosten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/stueckpreis_textview"
        android:layout_below="@+id/gesamtkosten_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gesamtkosten_textview"
        android:layout_toRightOf="@+id/gesamtkosten_textview"
        android:layout_toEndOf="@+id/gesamtkosten_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/gesamtkosten_output"
        android:layout_alignTop="@+id/gesamtkosten_textview"
        android:textSize="16sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stueckkosten_output"
        android:layout_alignBaseline="@+id/stueckpreis_textview"
        android:layout_alignBottom="@+id/stueckpreis_textview"
        android:layout_toRightOf="@+id/stueckpreis_textview"
        android:layout_toEndOf="@+id/stueckpreis_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textSize="16sp" />

   <!-- <Button
        android:text="@string/zurueck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/zurueck_button"
        android:onClick="goToPreviousActivity"/>-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:id="@+id/verkaufspreis_input"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/verkaufspreis_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="z.B.: 129,99€" />

    <TextView
        android:text="@string/gesamtkosten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:id="@+id/gesamtkosten_textview"
        android:textSize="16sp"
        android:layout_below="@+id/verkaufspreis_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/verkaufspreis_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verkaufspreis_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/verkaufspreis_info_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
