<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/activity_e1_forschung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.ForschungActivity"

    >



    <Button
        android:text="@string/weiter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weiter_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="goToNextActivity"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/forschung_spinner"
        android:layout_below="@+id/forschung_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/forschung_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/forschung_info_textview" />

    <TextView
        android:text="@string/forschung_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forschung_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/forschung_info_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
        android:text="textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gesamtkosten_textview"
        android:layout_toRightOf="@+id/gesamtkosten_textview"
        android:layout_toEndOf="@+id/gesamtkosten_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/gesamtkosten_output"
        android:layout_alignTop="@+id/gesamtkosten_textview"
        android:textSize="18sp" />

    <TextView
        android:text="3,45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stueckkosten_output"
        android:layout_alignBaseline="@+id/stueckpreis_textview"
        android:layout_alignBottom="@+id/stueckpreis_textview"
        android:layout_toRightOf="@+id/stueckpreis_textview"
        android:layout_toEndOf="@+id/stueckpreis_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textSize="18sp"
        tools:text="textview" />

        <TextView
        android:text="@string/stueckkosten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/stueckpreis_textview"
            android:textSize="18sp"
            android:layout_below="@+id/gesamtkosten_output"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp" />

        <TextView
            android:text="@string/gesamtkosten_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gesamtkosten_textview"
            android:textSize="18sp"
            android:layout_marginBottom="74dp"
            android:layout_above="@+id/weiter_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!--<Button
            android:text="@string/zurueck_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/zurueck_button"
            android:onClick="goToPreviousActivity"/>-->

</RelativeLayout>

</LinearLayout>