<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_e8_marketing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MarketingActivity">


    <Button
        android:text="@string/weiter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weiter_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="goToNextActivity"/>

    <TextView
        android:text="@string/marketing_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/marketing_info_textview" />

    <TextView
        android:text="@string/stueckkosten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/stueckpreis_textview"
        android:layout_below="@+id/gesamtkosten_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gesamtkosten_textview"
        android:layout_toRightOf="@+id/gesamtkosten_textview"
        android:layout_toEndOf="@+id/gesamtkosten_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/gesamtkosten_output"
        android:layout_alignTop="@+id/gesamtkosten_textview"
        android:textSize="16sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stueckkosten_output"
        android:layout_alignBaseline="@+id/stueckpreis_textview"
        android:layout_alignBottom="@+id/stueckpreis_textview"
        android:layout_toRightOf="@+id/stueckpreis_textview"
        android:layout_toEndOf="@+id/stueckpreis_textview"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textSize="16sp" />

    <TextView
        android:text="@string/marketing_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marketing_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/marketing_info_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fernsehwerbung_checkbox"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/marketing_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCheckboxClickedFersnsehwerbung"
        android:text="Fernsehwerbung (13000€)" />

    <TextView
        android:text="@string/gesamtkosten_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/gesamtkosten_textview"
        android:textSize="16sp"
        android:layout_below="@+id/printwerbung_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="Radiowerbung (5000€)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiowerbung_checkbox"
        android:layout_below="@+id/fernsehwerbung_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCheckboxClickedRadiowerbung"/>

    <CheckBox
        android:text="Printwerbung (2000€)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/printwerbung_checkbox"
        android:layout_below="@+id/radiowerbung_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCheckboxClickedPrintwerbung"/>

    <!--
        <Button
            android:text="@string/zurueck_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/zurueck_button"
            android:onClick="goToPreviousActivity"/>
    -->



</RelativeLayout>
