<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patsc.fallstudie.Activities.LoginActivity"
    android:background="@drawable/light_blue_bg">


    <TextView
        android:text="@string/login_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/login_info_textview" />

    <TextView
        android:text="@string/login_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_username_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/login_info_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/login_username_input"
        android:layout_below="@+id/login_username_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Nutzernamen wählen" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password_input"
        android:hint="Passwort wählen"
        android:layout_below="@+id/login_password_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/login_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/login_password_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/login_username_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Einloggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:onClick="login"/>

    <Button
        android:text="Neuer Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="29dp"
        android:id="@+id/button4"
        android:layout_below="@+id/login_password_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="register"/>


</RelativeLayout>
